1) Lergo-242 : Check boxes improvement - following user feedback 2) Submitt Validation for fill in the blanks and multi choice 3) Enter key working for answering multyi choince answer as well . 4) The question mark sign (?) for tip in do not shuffle questions and for video to be more up. 5)The (?) for shuffling question overlaps the word -please see attached how it is today (note: need to implement comment 2 above here as well). 6)For Russian language - there is no room. Tanya proposed to solve such localisation issues by putting the description of the fields, above the fields. She suggests to do that to all our pages (we don't have to do now). 6)The buttons "cancel" and "add" are not standard colors. Need to make "ADD' standard blue color, and "cancel" as it isn't what we want to emphasis, can be gray.

--- a/app/styles/_questions.scss
+++ b/app/styles/_questions.scss
@@ -139,11 +139,12 @@
 	width:100%;
 	.left-cell{
 		display: table-cell;
-		vertical-align: middle;
-		width:15%;
+		vertical-align: bottom;
+		width:20%;
 		span{
-		position:absolute;
+		position:relative;
 		padding-left:2px;
+		padding-bottom:10px;
 		}
 		.popover-content{
 		width:260px;
@@ -152,6 +153,7 @@
 			background-color: transparent;
 			border:0;
 			color: #2a6496;
+			vertical-align: super;
 		}
 	}
 	.right-cell{
